# AI_chat_tool

./: .gitignore  README.md  app-settings.example.json  config.example.json  index.html  package.json  plan.md  vite.config.ts
src/: main.ts  styles.css
src-tauri/: Cargo.toml  app-settings.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
