[package]
name = "chat-tool"
version = "0.1.0"
description = "A minimal desktop Q&A helper."
authors = ["chat-tool"]
edition = "2021"

[lib]
name = "chat_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
