[package]
name = "ichat"
version = "0.1.1"
description = "A minimal desktop Q&A helper."
authors = ["rocoo"]
edition = "2021"

[lib]
name = "chat_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["image-png", "macos-private-api", "tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
